tests/baselines/reference/legacy-octal-integer-strict.errors.txt
legacy-octal-integer-strict.ts(32,1): error TS1121: Octal literals are not allowed. Use the syntax '0o0'.


==== legacy-octal-integer-strict.ts (1 errors) ====
    // Copyright (C) 2016 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-literals-numeric-literals
    description: LegacyOctalIntegerLiteral is not enabled in strict mode code
    info: |
        NumericLiteral ::
          DecimalLiteral
          BinaryIntegerLiteral
          OctalIntegerLiteral
          HexIntegerLiteral
          LegacyOctalIntegerLiteral
    
        LegacyOctalIntegerLiteral ::
          0 OctalDigit
          LegacyOctalIntegerLiteral OctalDigit
    
        ## 12.8.3.1 Static Semantics: Early Errors
    
        NumericLiteral :: LegacyOctalIntegerLiteral
        DecimalIntegerLiteral :: NonOctalDecimalIntegerLiteral
    
        - It is a Syntax Error if the source code matching this production is
          strict mode code.
    flags: [onlyStrict]
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    00;
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
    